--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:setup-boss": "ts-node --project scripts/tsconfig.json scripts/setup-boss.ts"
+    "db:setup-boss": "ts-node --project scripts/tsconfig.json scripts/setup-boss.ts",
+    "db:migrate-turso": "ts-node --project scripts/tsconfig.json scripts/migrate-to-turso.ts",
+    "db:setup-boss-turso": "ts-node --project scripts/tsconfig.json scripts/setup-boss-turso.ts",
+    "db:migrate-data-to-turso": "ts-node --project scripts/tsconfig.json scripts/migrate-data-to-turso.ts"
   },
   "dependencies": {
-    "@auth/core": "^0.16.0",
+    "@auth/core": "^0.34.2",
     "@auth/drizzle-adapter": "^0.3.5",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "@hookform/resolvers": "^3.3.2",
+    "@libsql/client": "^0.15.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
